   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.

 * PARKINGSLOT and PARKEDLOT channel variables will now be set for a parked
   channel even when comebactoorigin=yes

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an
   individual queue, the PAUSEALL/UNPAUSEALL event will only be logged if at
   least one member of any queue exists for that interface.

 * Added the 'queue_log_realtime_use_gmt' option to have timestamps in GMT
   for realtime queue log entries.

MeetMe
-------------------
* Added the 'n' option to MeetMe to prevent application of the DENOISE function
  to a channel joining a conference. Some channel drivers that vary the number
  of audio samples in a voice frame will experience significant quality problems
  if a denoiser is attached to the channel; this option gives them the ability
  to remove the denoiser without having to unload func_speex.

Queue
-------------------
 * Add queue available hint.  exten => 8501,hint,Queue:markq_avail
   Note: the suffix '_avail' after the queuename.
   Reports 'InUse' for no logged in agents or no free agents.
   Reports 'Idle' when an agent is free.

Core
------------------
 * Redirecting reasons can now be set to arbitrary strings. This means
   that the REDIRECTING dialplan function can be used to set the redirecting
   reason to any string. It also allows for custom strings to be read as the
   redirecting reason from SIP Diversion headers.

Realtime
------------------
 * Dynamic realtime tables for SIP Users can now include a 'path' field. This
   will store the path information for that peer when it registers. Realtime
   tables can also use the 'supportpath' field to enable Path header support.

 * LDAP realtime configurations for SIP Users now have the AstAccountPathSupport